# Pulse

./: .gitignore  README.md  run.sh
backend/: .env.example  BACKEND_README.md  main.py  pyproject.toml  requirements.txt
backend/app/: assets.py  config.py  db.py  main.py
data/: DATA_README.md  app_extensions.sql  musicdb.sql  musicstreamingdb.mwb
docs/: DOCS_README.md
frontend/: FRONTEND_README.md  package-lock.json  package.json
frontend/src/lib/: api.ts  player.ts  session.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  layout.css
frontend/src/routes/album/[id]/: +page.svelte  +page.ts
frontend/src/routes/artist-dashboard/[id]/: +page.svelte  +page.ts
frontend/src/routes/artist/[id]/: +page.svelte  +page.ts
frontend/src/routes/artist/[id]/shows/[showId]/book/: +page.svelte  +page.ts
frontend/src/routes/playlist/[id]/: +page.svelte  +page.ts
frontend/src/routes/search/: +page.svelte  +page.ts
frontend/src/routes/user/[id]/: +page.svelte  +page.ts
